--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "native-base": "2.13.13",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-elements": "2.2.1",
     "react-native-gesture-handler": "1.7.0",
     "react-native-ionicons": "4.6.5",
     "react-native-reanimated": "1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "2.10.1",
+    "react-native-searchable-dropdown": "1.1.1",
     "react-native-simple-modal": "9.0.1",
     "react-navigation": "4.4.0",
     "react-navigation-stack": "2.8.2",
