--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
+    "axios": "0.19.2",
+    "mobx": "5.15.5",
+    "mobx-react": "6.2.5",
     "native-base": "2.13.13",
     "react": "16.13.1",
     "react-native": "0.63.2",
@@ -29,6 +32,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.11.1",
+    "@babel/plugin-proposal-decorators": "7.10.5",
     "@babel/runtime": "7.11.2",
     "@react-native-community/eslint-config": "2.0.0",
     "@types/react": "16.9.46",
