--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/native-stack": "5.0.5",
+    "@react-navigation/stack": "5.9.0",
     "axios": "0.19.2",
     "mobx": "5.15.5",
     "mobx-react": "6.2.5",
@@ -20,6 +22,7 @@
     "react-native-camera": "3.36.0",
     "react-native-elements": "2.2.1",
     "react-native-gesture-handler": "1.7.0",
+    "react-native-image-picker": "2.3.3",
     "react-native-reanimated": "1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "2.10.1",
